@@ -11,6 +11,9 @@ Release date: TBA
 Core and Builtins
 -----------------
 
+- Issue #25449: Fixed a crash and leaking NULL in repr() of OrderedDict that
+  was mutated by direct calls of dict methods.
+
 - Issue #25449: Iterating OrderedDict with keys with unstable hash now raises
   KeyError in C implementations as well as in Python implementation.
 
